# sql-probe

./: .gitignore  README.md  __init__.py  notifier.py  pyproject.toml  requirements.txt  setup.py  test_webhook_local.py
core/: __init__.py  aggregation.py  aggregator.py  executor.py  resolver.py  template.py
examples/: __init__.py  basic_usage.py  sql_templates.py
feishu-notify/: .gitignore  README.md
feishu-notify/config/: __init__.py
feishu-notify/core/: __init__.py  sender.py  types.py
feishu-notify/examples/: __init__.py  basic_usage.py
feishu-notify/templates/: __init__.py
feishu-notify/templates/base/: success.json  warning.json
feishu-notify/templates/custom/: data_quality.json  timeout_warning.json
feishu_notify/: __init__.py  notifier.py  pyproject.toml  requirements.txt
feishu_notify/config/: levels.json
feishu_notify/core/: builder.py  dedup.py  sender.py  types.py
feishu_notify/examples/: airflow_integration.py
feishu_notify/templates/: loader.py
feishu_notify/templates/base/: critical.json  error.json  info.json  pending.json
models/: __init__.py  result.py
notebooks/: sql_probe_demo.py  sql_probe_quickstart.py
sql_probe/: __init__.py  notifier.py
sql_probe/core/: __init__.py  executor.py  history.py
sql_probe/models/: exceptions.py  level.py
tests/: __init__.py  test_aggregator.py  test_level.py  test_probe.py  test_resolver.py
